connected "add weapon" to hardcoded database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <activity
             android:name=".NewCharacter.NewCharacterActivity"
             android:exported="false" />
+        <activity
+            android:name=".NewCharacter.WeaponActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
