- Changed floating button in new character screen - Added ability activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity
             android:name=".NewCharacter.WeaponActivity"
             android:exported="false" />
+        <activity
+            android:name=".NewCharacter.AbilityActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
